# hashall

./: .gitattributes  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
src/: main.rs
tests/: tests.rs
tests/data/: .hidden_file.txt  archive.tar  archive.tar.bz2  archive.tar.xz  archive.tar.zst  file.txt
tests/data/.hidden/: file.txt
tests/data/directory/: file.txt
