[package]
name = "hashall"
version = "0.1.0"
edition = "2021"
license = "MIT"

description = 'A simple CLI tool to hash all files in a directory'

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
digest = "0.10.7"
env_logger = "0.11.0"
log = "0.4.20"
md-5 = "0.10.6"
parse-size = "1.0.0"
zip = "0.6.6"
