[package]
name = "hashall"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A simple CLI tool to hash all files in a directory (and files in the archive files)."

authors = ["Yuki SUZUKI <y-suzuki@radiol.med.osaka-u.ac.jp>"]
repository = "https://github.com/ykszk/hashall"

[dependencies]
anyhow = "1.0.79"
bzip2 = "0.4.4"
clap = { version = "4.4.18", features = ["derive"] }
digest = "0.10.7"
env_logger = "0.11.0"
flate2 = "1.0.28"
log = "0.4.20"
md-5 = "0.10.6"
parse-size = "1.0.0"
sha1 = "0.10.6"
tar = "0.4.40"
walkdir = "2.4.0"
xz2 = "0.1.7"
zip = "0.6.6"
zstd = "0.13.0"

[dev-dependencies]
assert_cmd = "2.0.13"
pretty_assertions = "1.4.0"
